--- a/13关于赴瑞行程.md
+++ b/13关于赴瑞行程.md
@@ -7,12 +7,11 @@
 
 #### **1.2 机票日期/时间选择**：
 
-* 航班落地（入境）时间必须在签证生效日期以后（因此不建议在获得签证前便购买机票），以避免入境时遇到麻烦。一般情况下，签证生效时间相比于开学都不会提前太多。
-* 如果到达苏黎世后不再需要担心住房问题，或者你在购买机票前已经成功找到了住房（根据我们的经验，这基本不可能...），那么在开学前5-7天抵达苏黎世便足够。如果你还没有找到住房，建议提前2-3周抵达苏黎世以安排找房事宜（苏黎世找房难度很高，因此建议预留充足时间，详见[“‘云’找房”](<14“云”找房.md>)和[“找房租房”](<24找房租房.md>)部分）。当然，如果签证生效时间晚于此的话，自然是以签证生效时间为准，避免产生滞留问题。
-* 航班到达时间不宜过晚，以上午/下午为宜，以便为接下来的日程（手续办理、物品采购、与房东交接等）留足时间，并避免因公共交通班次减少等原因导致难以到达市区
-
-自苏黎世机场前往市区，如未安排接机的，一般选择乘坐火车，仅需10min即可抵达市区的主火车站（Zürich HB），再通过有轨电车等方式前往最终目的地；
-可提前下载Google Map和SBB Mobile/ZVV应用（本应用及许多在瑞常用的应用运行需要谷歌框架，使用安卓手机，尤其是华为系列手机的同学请特别注意），并由此查询路线&购票（详见[“交通票”](21交通票.md)及[“落地事项”](02落地事项.md)部分）；苏黎世的出租车价格高昂，非必要不建议乘坐。
+* 航班落地（入境）时间必须在签证生效日期以后（因此不建议在获得签证前便购买机票），以避免航司拒载或是滞留国外。一般情况下，签证生效时间相比于开学都不会提前太多。
+* 如果到达苏黎世后不再需要担心住房问题，或者你在购买机票前已经成功找到了住房（根据我们的经验，这对于需要自行寻找住所的同学基本不可能...），那么在开学前5-7天抵达苏黎世便足够。如果你还没有找到住房，建议提前2-3周抵达苏黎世以安排找房事宜（苏黎世找房难度很高，因此建议预留充足时间，详见[“‘云’找房”](<14“云”找房.md>)和[“找房租房”](<24找房租房.md>)部分）。当然，如果签证生效时间晚于此的话，自然是以签证生效时间为准，避免无法登机或造成滞留。
+* 航班到达时间不宜过晚，以上午/下午为宜，以便为接下来的日程（手续办理、物品采购、与房东交接等）留足时间，并避免因公共交通班次减少等原因导致难以前往市区。
+从苏黎世机场前往市区一般乘坐火车，仅需10min即可抵达市区的主火车站（Zürich HB），再通过有轨电车等方式前往最终目的地；
+为此，可提前下载Google Map和SBB Mobile/ZVV应用（本应用及许多在瑞常用的应用运行需要谷歌框架，使用安卓手机，尤其是华为系列手机的同学请特别注意，详见[“国内手机和手机号”](<11国内手机号.md>)部分），并由此查询路线&购票（详见[“交通票”](21交通票.md)及[“落地事项”](02落地事项.md)部分）；苏黎世的出租车价格高昂，非必要不建议乘坐。
 
 #### **1.3 中转路线选择注意事项**
 
@@ -57,7 +56,7 @@
 
 #### **1.11 选座tips（适用于搭乘经济舱的同学**）
 
-* 希望较少被打扰的，或是希望飞行途中欣赏风景的，建议选择靠窗座位（后者需额外注意飞机舷窗排列以避免坐到“面壁座”）
+* 希望较少被打扰的，或是希望飞行途中欣赏风景的，建议选择靠窗座位（后者需额外注意飞机舷窗排列以避免坐到“面壁座”，飞机客舱布局和/或舷窗排列可参考航司官网、飞常准及[Aerolopa](<https://www.aerolopa.com/>)）
 * 希望进出方便的，或是希望拥有稍大腿部空间的，建议选择过道座位
 * 希望拥有较大腿部空间的，建议选择经济舱首排/紧急出口排（一般需额外在航司官网选购；选择紧急出口座位的在紧急情况下需履行相应义务）
 * 因为晕机等因素，希望较少受到气流和颠簸影响的，建议选择飞机中段部位（视野可能受到遮挡）
@@ -70,7 +69,8 @@
 * 同一航空联盟的航空公司（如中国国际航空CA和瑞士国际航空LX，二者同属星空联盟），或
 * 不属于同一航空联盟，但有代码共享协议的航空公司（如中国南方航空CZ和法国航空AF，前者不属于任何联盟，后者属于天合联盟，二者间有代码共享协议），或
 * 同一集团的航空公司（如汉莎航空LH和欧洲之翼航空EW，二者同属汉莎集团）
-  的里程可以相互累积但不得进行签转（即不得将A航司的里程转到B航司账户下）。
+
+的里程可以相互累积但不得进行签转（即不得将A航司的里程转到B航司账户下）。
 
 我们推荐，在确定好自己的赴瑞路线后，即可在对应航司及其合作伙伴中选择一家进行里程累积。在其常旅客计划官网进行注册后即可获得会员卡号，在办理值机时填写（适用于线上值机）/出示（适用于柜台值机）会员卡号即可将里程累积到账户里。如已有参与某家航司常旅客计划的，可以直接选择该航司或其合作伙伴的赴瑞航线航班，以进一步累积在该航司的里程，累计里程步骤与前文所述相同。如办理值机时因故未能出示会员卡号，亦可在航班到达后填写相关信息进行里程补登。
 我们还建议，对于日后的回国和赴瑞行程，以及其他航空行程，凡可能，均选择自己有参与其常旅客计划的航司及其合作伙伴（如参与国航“凤凰知音”计划，则尽可能选择星空联盟成员承运航班）以确保里程累积的统一性。
@@ -86,8 +86,7 @@
 ^
 ### **2. 赴瑞可能路线及其特点**
 
-（综合当前航班执行情况、现有航班计划、当前放票情况、航司合作情况、行李直挂情况、行程总时长、航司“靠谱”程度等编写）
-（本章节所有票价信息均为4月23日通过官网、OTA平台等查询8月中下旬机票，结合本人经验获得，仅供参考）
+（本章节综合当前航班执行情况、现有航班计划、当前放票情况、航司合作情况、行李直挂情况、行程总时长、航司“靠谱”程度等编写；所有票价信息均为4月23日通过官网、OTA平台等查询8月中下旬机票，结合本人经验获得，仅供参考）
 
 #### **2.1 自中国内地直航赴瑞**
 
@@ -95,7 +94,6 @@
 
 * 总耗时最短，最为方便快捷
 * 不会涉及任何中转问题（如中转机场地勤罢工、前序航班延误导致误机等）
-* 里程累积相对灵活
 
 缺点：
 
@@ -116,6 +114,10 @@
 * 出境口岸选择多
 * 航班数量相对多
 * 持有7日内前往瑞士（或其他国家）的机票的，可入境香港特区停留不多于7天而无需办理港澳通行证，具体请参考[特区政府有关规定](https://www.immd.gov.hk/hks/services/visas/overseas-chinese-entry-arrangement.html)。
+* 香港赤鱲角机场近日联合包含国泰航空CX在内的香港各主要航司举行抽奖活动，目前是第二轮，中奖者可获得免费机票，详见：
+-- 香港赤鱲角机场[《飞遇世界大赏》](<https://wow.hongkongairport.com/lang/sc/tickets/>)
+-- 国泰航空[《「飞遇世界大赏」机票礼遇 - 中国香港始发机票大抽奖》](<https://flights.cathaypacific.com/sc_CN/offers/world-of-winners-outbound-hk.html>)
+后续活动信息请关注香港赤鱲角机场及国泰航空。
 
 缺点：
 
@@ -128,14 +130,13 @@
 * CX383航班，[国泰航空](https://www.cathaypacific.com/cx/sc_CN.html)承运，7月1日起调整为每周二、四、六执行，起降时刻23:10-06:30+1，实际飞行时长约13h，执飞机型为A35K
 * LX139航班，[瑞士国际航空](https://www.swiss.com/cn/zh/homepage)承运，每周一、二、三、五、六、日执行，起降时刻22:25-06:10+1，实际飞行时长约13.5h，执飞机型为A343
 
-亦可以将本项与下面的3项结合起来安排路线，选择经香港前往申根区其他城市，再转机赴瑞，如“西安-香港-法兰克福-苏黎世”。
+亦可以将本项与下面的3项结合起来安排路线，选择经香港前往其他城市，再转机赴瑞，如“西安-香港-法兰克福-苏黎世”“成都-香港-多哈-苏黎世”等。
 
 #### **2.3 经申根区内其他城市转机赴瑞**
 
 优点：
 
 * 总耗时较短
-* 里程累积相对灵活
 * 持有有效申根签证可入境中转国，即使遇到诸如航班取消一类的问题也不至于滞留在中转区进出不得
 
 缺点：
@@ -175,7 +176,7 @@
   承运航司：[中国国际航空CA](https://www.airchina.com.cn/)、[北欧航空SK](https://www.flysas.com/cn-zh/)、[瑞士国际航空LX](https://www.swiss.com/cn/zh/homepage)等
   单程价格：中国国际航空：约8-9k；北欧航空：约4-6k
 
-此外，还有经华沙肖邦WAW转机的选择，但鉴于波兰航空LO疫情期间的种种“操作”，及其看起来十分不靠谱的航班计划，我们不建议选择该路线赴瑞。
+此外，还有经华沙肖邦WAW转机的选择，但鉴于波兰航空LO疫情期间的种种“操作”，及其安排的看起来十分不靠谱的航班计划（5月1日起每周4班华沙⇄北京，其中2班在首都机场，2班在大兴机场），我们目前不建议选择该路线赴瑞（若后期其计划的航班均正常执行，则可以考虑，但据反馈该航司在航班取消时操作退款速度极慢）。
 
 #### **2.4 经中东转机赴瑞**
 
@@ -188,7 +189,7 @@
 缺点：
 
 * 因地理原因，总耗时较长（普遍在17.5h以上）
-* 里程累积相对不灵活\[阿联酋航空EK和阿提哈德航空EY均不属于任何航空联盟，在此累积的里程只能在本航司（及其合作伙伴处）消费；卡塔尔航空QR属于寰宇一家联盟，但该联盟在中国内地和申根区的实力都偏弱]
+* 前后程均为洲际航线，如遇后程航班取消（此类情况不多见），等待下一可用航班所花费时间可能较长
 
 其他特点：
 
@@ -227,7 +228,7 @@
   \-- 持有申根D类签证的，或是持有申根居留卡的，原则上不需要申请过境签证
   \-- 出境城市选择较多
   缺点：
-  \-- 政策执行较为“灵活”，各地勤遇到各个情况时的处理方式均不同，很多航司也拒绝承认英国的免签入境规定，因此有滞留风险
+  \-- 政策执行较为“灵活”，各地勤遇到各个情况时的处理方式均不同，很多航司也拒绝承认英国的免签入境规定，因此有无法登机/滞留风险
   \-- 价格稍高
 
 此外，亦有经新加坡、曼谷等东南亚城市转机的选择。因其耗时普遍较长（长于上述所有方案），在此不列入。
@@ -246,7 +247,7 @@
 ### **3. 参考**
 
 * 国际航线航班信息：[知乎《国际航班汇总》专栏](https://www.zhihu.com/column/c_1286552806351065088)（由本人，即[知乎@ZBAA-APP](https://www.zhihu.com/people/zbaa-app/)汇总整理，欢迎关注）
-* 航班不正常保障及旅客权益：[EC261](https://mp.weixin.qq.com/s/17NE6r18HiANbfHoRcEjPA)介绍
+* 航班不正常保障及旅客权益：[欧盟对EC261的介绍（英文版）](<https://europa.eu/youreurope/citizens/travel/passenger-rights/air/index_en.htm>)、[航空博主SiriusDEUU对EC261的介绍](https://mp.weixin.qq.com/s/17NE6r18HiANbfHoRcEjPA)
 * 内地往来香港航班信息：[知乎《港澳台地区航班及相关信息》专栏](https://www.zhihu.com/column/c_1593393411708715010)
 
 及文中其他外链。
