--- a/24找房租房.md
+++ b/24找房租房.md
@@ -2,9 +2,11 @@
 
 * 酒店：酒店价格会比较高，适合极短期（一周内）
 * 民宿：性价比会更高，而且可以做饭。可以找适合多人住的民宿，然后在群里找同学一起拼，价格会比较优惠
+
+> 有些青年旅馆或酒店居住时长超过1个月会签租房合同（提前与酒店确认），可以拿这个合同去人口登记办公室报到
+
 * 学长学姐/朋友家
 * 群里的短租：自行甄别筛选
-* *有些青年旅馆或酒店居住时长超过1个月会签租房合同（提前与酒店确认），可以拿这个合同去居委会报到*
 
 ^
 
@@ -82,7 +84,7 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 
 #### **4**. **租房注意事项**
 
-1. 所租房子是否能签署租房合同（有合同才能去居委会报到）
+1. 所租房子是否能签署租房合同（有合同才能去人口登记办公室报到）
 2. 尽量租在110区
 3. 确认房费是否包含水电网暖气电视等费用，是否含有家具，是否需要承接家具。如果不包含家具，可在IKEA添置，或在群里收二手，或在家附近捡一些居民不用的家具。不要被没有家具劝退，自己在宜家置办家具也是不错的选择，详情可自行参考ikea网站https\://www\.ikea.com/ch/en/
 4. 押金一般需要交到专用押金账户，若是私人账户，需谨慎
@@ -100,7 +102,7 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 
 #### **5**. **什么是注册地址**
 
-1. 总的来说，“注册地址”一词是很久以前由坊间发明创造出来的词汇，其并不对应任何官方条文概念。官方要求请见“[25 居委会报到](25居委会报到.md)”篇。
+1. 总的来说，“注册地址”一词是很久以前由坊间发明创造出来的词汇，其并不对应任何官方条文概念。官方要求请见“[25 住址的申报与注销](25住址的申报与注销.md)”篇。
 2. 只要能签租房合同，无论是Mietvertrag oder Untermietvertrag（原始合同或转租合同），都是可以的。请注意如果你是租的转租，需要把转租合同和二房东手里的原始合同一起带去Kreisbüro，且最好二房东一起陪同前往Kreisbüro报到
 3. 不能注册地址的租房，就是不给你合同的租房，一般是期限很短的租房，如一个星期。**如果租房时长在一个月及以上**，**无论直租还是转租，按惯例是需要签订租房合同的（直租或转租合同），有合同就可以去Kreisbüro报到**
 4. 所谓收注册地址/出注册地址，其实就是开假的租房合同给你，实际上你并不住那里，只是让你可以先去报到。学联非常不推荐买卖注册地址（假合同），这是非法的，一旦被发现，将会导致一系列连锁的问题和麻烦。且移民局和Kreisbüro的文件都会寄到这个假地址，这样的话，你很有可能永远也拿不到这些文件了
